--- a/Logical_practice.Rmd
+++ b/Logical_practice.Rmd
@@ -22,11 +22,73 @@ View(starwars)
 
 ```
 
-```{r}
+```{r, echo=FALSE}
 #aes used for mapping against a variable
 
 ggplot(data = starwars, aes(x = height, y = mass)) +
   geom_point(color = 'purple')
+
+```
+```{r}
+
+sw_height_vr <- var(starwars$height, na.rm = T)
+sw_height_vr
+
+sw_height_sd <- sd(starwars$height, na.rm = T)
+sw_height_sd
+
+```
+
+Mean character height is `r round(sw_height_vr, 1)` cm, with a standard deviation of `r round(sw_height_sd, 1)` cm
+
+## Logical expressions
+
+```{r}
+
+5 < 10
+
+"cat" > "armadillo"
+
+"cat" > "elephant"
+
+'dog' == 'dog'
+
+```
+
+```{r}
+10<=11
+
+5>=4
+
+3<=1
+
+
+```
+
+```{r}
+
+spiders <- c(1, 3, 7, 10, 15)
+
+spiders > 5
+
+```
+## Logical operators
+- `!`
+- `&`
+- `|`
+```{r}
+
+3 < 1 | 8 > 2
+
+6 < 10 & 5 < 1
+
+7 != 11
+
+4 != 4 | 2 < 5 | 6 > 10
+
+0 == F
+
+1 == T
 
 ```
 
